# wasm-knowledge-chatbot-rs

./: .gitignore  .knowledge_cache.json  Cargo.toml  README.md  Trunk.Dep.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  trunk-dev.toml
.github/workflows/: ci.yml
docs/: index.html  output-588b9ff09b928090.css  wasm-knowledge-chatbot-rs-277f57c07f5a0cf7.js  wasm-knowledge-chatbot-rs-277f57c07f5a0cf7_bg.wasm  wasm-knowledge-chatbot-rs-d96cbe5d87fe7c49.js  wasm-knowledge-chatbot-rs-d96cbe5d87fe7c49_bg.wasm
public/: input.css  output.css  styles.scss
scripts/: run-wasm-tests.sh
src/: advanced_graphrag.rs  error_handling.rs  graphrag_config.rs  lib.rs  main.rs  models.rs  pagerank_reranking.rs  webllm_binding.rs
src/components/: chat_area.rs  conversation_history.rs  conversation_list.rs  document_manager_simple.rs  graphrag_settings.rs  graphrag_settings_modal.rs  input_area.rs  llm_select.rs  main_interface.rs  message_bubble.rs  mod.rs  sidebar.rs  sidebar_action.rs  sidebar_monitor.rs  status_bar.rs  theme_toggle.rs  ui_primitives.rs
src/features/: mod.rs
src/models/: app.rs  chat.rs  crm.rs  graph_store.rs  graphrag.rs  mod.rs  webllm.rs
tests/: crm_state_tests.rs  crm_ui_smoke.rs  debug-theme.html  fixtures.rs  graphrag_basic_tests.rs  graphrag_engine_tests.rs  graphrag_extraction_tests.rs  graphrag_integration.rs  graphrag_metrics_tests.rs  graphrag_panel_error_tests.rs  graphrag_panel_tests.rs  graphrag_traversal_tests.rs  knowledge_storage_tests.rs  test_components.html  test_utils.rs  traversal_tests.rs
(+48 files in other folders)
