[package]
name = "wasm-knowledge-chatbot-rs"
version = "0.1.0"
edition = "2021"
authors = ["dio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "HtmlElement",
  "HtmlInputElement",
  "Element",
  "console",
  "Storage",
  "Navigator",
  "File",
  "FileList",
  "Blob",
]

[dependencies.wasm-bindgen]
version = "0.2"

[dependencies.js-sys]
version = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.uuid]
version = "1.0"
features = ["v4", "js"]

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dependencies.gloo-timers]
version = "0.3"
features = ["futures"]

[dependencies.regex]
version = "1.0"

[dependencies.html-escape]
version = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
csr = []

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
